-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8
-
None
-
d0c358b1e (dev), 1044ec540 (6.8)
Many tests are failing, regarding the dimmer, when setting popupType to Popup.Window. The dimmer is attempting to stack itself behind the top level PopupWindow, which of course is unnecessary.
Failing tests:
FAIL! : tst_controls::Universal::Popup::test_overlay() Received a warning that resulted in a failure: QQuickItem::stackBefore: Cannot stack QQuickRectangle(0x62eb07638c80, parent=0x62eb075c35f0, geometry=0,0 0x0) before QQuickPopupItem(0x62eb07533ed0), which must be a sibling Loc: [/home/edc/dev/qt/src/dev/qtdeclarative/src/quick/items/qquickitem.cpp(2874)] FAIL! : tst_controls::Universal::Popup::test_popupOverlayCenterIn() Received a warning that resulted in a failure: QQuickItem::stackBefore: Cannot stack QQuickRectangle(0x62eb072813a0, parent=0x62eb07530fb0, geometry=0,0 0x0) before QQuickPopupItem(0x62eb075c35f0), which must be a sibling Loc: [/home/edc/dev/qt/src/dev/qtdeclarative/src/quick/items/qquickitem.cpp(2874)] FAIL! : tst_controls::Universal::Popup::test_popupWithOverlayInLoader() Received a warning that resulted in a failure: QQuickItem::stackBefore: Cannot stack QQuickRectangle(0x62eb075726a0, parent=0x62eb07530fb0, geometry=0,0 0x0) before QQuickPopupItem(0x62eb07711120), which must be a sibling Loc: [/home/edc/dev/qt/src/dev/qtdeclarative/src/quick/items/qquickitem.cpp(2874)]